--- a/index.html
+++ b/index.html
@@ -297,17 +297,14 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
-                            <h4>Github</h4>
-                            <p class="text-muted">首先解决大学生忘带钥匙无法进门的问题</p>
-                             <p class="text-muted">并在实践中不断完善技术，争取做出更好的产品</p>                     
+                            <h4>解决大学生忘带钥匙无法进门的痛点</h4>
+                            <p class="text-muted"></p>                                                 
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
-                            <h4>CSDN</h4>
-                            <p class="text-muted">专业IT技术社区</p>
-                            <p class="text-muted">网址链接[https://www.csdn.net/]</p>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
+                            <h4>后续过程完善技术</h4>                      
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
@@ -315,9 +312,9 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                            <h4>大橙子的能量基站</h4>
-                            <p class="text-muted">我们用于专门做讲解的公众号呦</p>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
+                            <h4>最后致力降低成本</h4>
+                            <p class="text-muted"></p>
                             <p class="text-muted"></p>
                         </div>
                     </div>
