--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-heading text-uppercase">嗨，你好！愿NOKEYS给您带来舒适体验！</div>
+                <div class="masthead-heading text-uppercase">嗨，您好！愿NOKEYS给您带来便利！</div>
                 <div class="masthead-subheading">我们是巧机天工有限公司</div>
                 <div class="masthead-subheading">小科技，大改变</div>
                 <div class="masthead-subheading">Welcome To Our Website!</div>
@@ -87,9 +87,10 @@
                     <h2 class="section-heading text-uppercase">产品相关</h2>
                     <h3 class="section-subheading text-muted">Something About Our Products</h3>
                 </div>
-                <h3>              产品开锁示意图            </h3>
                 <p style="text-align: center;">
-                <img src="assets/img/portfolio/7.jpg" alt="open" width="600" height="400">
+                <h3>产品开锁示意图</h3>
+                <p style="text-align: center;">
+                <img src="assets/img/portfolio/7.jpg" alt="open" width="1000" height="800">
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 1-->
