--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
                     <h3 class="section-subheading text-muted">Something About Our Products</h3>
                 </div>
                 <p style="text-align: center;">
-                <h3>产品开锁示意图</h3>
-                <p style="text-align: center;">
-                <img src="assets/img/portfolio/7.jpg" alt="open" width="1000" height="800">
+                <h3 align="center">产品开锁示意图</h3>             
+                <img src="assets/img/portfolio/7.jpg" alt="open" width="1200" height="1000">
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 1-->
