--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                 </div>
                 <p style="text-align: center;">
                 <h3 align="center">产品开锁示意图</h3>             
-                <img src="assets/img/portfolio/7.jpg" alt="open" width="1200" height="1000">
+                <img src="assets/img/portfolio/7.jpg" alt="open" width="1200" height="900">
+                <h3 align="center"> </h3>    
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 1-->
