--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>      
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=0.3, maxmum-scale=1.0, minimum-scale=0.3">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=0.28, maximum-scale=0.28, minimum-scale=0.28">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>NOKEYS——巧机天工</title>
