--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">开发宗旨</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">产品特点</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">产品相关</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">团队介绍</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">未来方向</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">团队方向</a></li>
                     </ul>
                 </div>
             </div>
